--- a/config/database.yml
+++ b/config/database.yml
@@ -10,16 +10,16 @@
 #   https://dev.mysql.com/doc/refman/5.7/en/password-hashing.html
 #
 default: &default
-  adapter: mysql2
-  encoding: utf8
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  adapter: postgresql
+  encoding: unicode
+  pool: 5
   username: root
   password:
   socket: /var/lib/mysql/mysql.sock
 
 development:
   <<: *default
-  database: tasklist_development
+  database: tasklist_production
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
